--- a/ureport-console/pom.xml
+++ b/ureport-console/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
-		<groupId>io.github.tmgg</groupId>
+		<groupId>io.github.jiangood</groupId>
 		<artifactId>ureport-parent</artifactId>
 		<version>1.0.3</version>
 	</parent>
@@ -30,7 +30,7 @@
 			<version>1.7</version>
 		</dependency>
 		<dependency>
-			<groupId>io.github.tmgg</groupId>
+			<groupId>io.github.jiangood</groupId>
 			<artifactId>ureport-core</artifactId>
 		</dependency>
 		<dependency>
