--- a/ureport-console/pom.xml
+++ b/ureport-console/pom.xml
@@ -8,6 +8,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>ureport-console</artifactId>
+	<name>ureport-console</name>
 	<dependencies>
 		<!--引入AOP依赖-->
 		<dependency>
