--- a/ureport-core/pom.xml
+++ b/ureport-core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.github.jiangood</groupId>
 		<artifactId>ureport-parent</artifactId>
-		<version>1.0.7</version>
+		<version>${revision}</version>
 	</parent>
 
 	<dependencies>
