chore(deps): 固定antlr4-runtime版本为4.5.3
- 将antlr4-runtime版本从4.13.0降级到4.5.3
- 添加注释说明此版本固定原因以避免意外升级
- 参考ReportLexer.java文件中的兼容性要求

--- a/ureport-core/pom.xml
+++ b/ureport-core/pom.xml
@@ -44,7 +44,9 @@
 		<dependency>
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4-runtime</artifactId>
-			<version>4.13.0</version>
+			<!--<version>4.13.0</version>-->
+			<!--固定4.5.3,请勿升级 参考 ReportLexer.java-->
+			<version>4.5.3</version>
 		</dependency>
 		<dependency>
 			<groupId>dom4j</groupId>
