fix:  数据库存储，更新失败的问题 add： 前端增加判断是否成功，并提示

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 	</scm>
 
 	<properties>
-		<revision>1.0.14-SNAPSHOT</revision>
+		<revision>1.0.14</revision>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>17</java.version>
 		<compile.version>17</compile.version>
